--- a/8-言語/80-言語/801／808-総記/801-言語学/801.5-文法論：形態論，構文論［統語論］．言語類型論/801.5-文法論：形態論，構文論［統語論］．言語類型論.md
+++ b/8-言語/80-言語/801／808-総記/801-言語学/801.5-文法論：形態論，構文論［統語論］．言語類型論/801.5-文法論：形態論，構文論［統語論］．言語類型論.md
@@ -6,3 +6,96 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. 古典文法の成立：インド（パーニニ）／ギリシア・ラテン（品詞・格・統語）の枠組み
+- 2. 中世〜近世の規範文法と普遍文法：文法書の伝統からポール＝ロワイヤル文法へ
+- 3. 19世紀の比較言語学と歴史文法：印欧比較・再建、屈折の分析、フンボルトの類型観
+- 4. 20世紀前半の構造主義と言語記述：音韻論・形態論・統語論の分業、分布分析と構成素
+- 5. 生成文法の登場と統語理論の展開：チョムスキー以降の句構造・変形・普遍文法をめぐる議論
+- 6. 形式意味論とインタフェース：格・項構造、統語と意味の対応、語順と解釈の相互作用
+- 7. 機能主義／認知・使用基盤の潮流：談話・情報構造、文法化、構文文法と類型研究の接点
+- 8. 言語類型論の体系化：グリーンバーグの普遍性、含意的普遍、語順類型と形態類型（総合・融合など）
+- 9. 記述文法とデータ駆動型類型論：フィールドワーク、コーパス、WALS等のデータベースと計量手法
+- 10. 現代の課題と展望：言語多様性の保全、理論の統合、計算モデル／AIと言語研究の関係
+-->
+
+### 1. 古典文法の成立：インド／ギリシア・ラテンの枠組み
+
+形態論と統語論の源流は、言語を「正しく」扱う技術としての文法にある。インドでは、紀元前4世紀ごろのパーニニが『八章書（アシュターディヤーイー）』で精緻な規則体系を提示し、音韻交替や語形成を含む分析の道具立てを整えた。ここでは、限られた規則と例外処理で膨大な語形を生成するという発想が早くも現れている。一方、ギリシア世界ではプラトンやアリストテレスの範疇論が思考の分類を与え、前2世紀ごろのディオニュシオス・トラクス『文法技術』が品詞・屈折・統語にまたがる教養としての文法を定式化した。さらに2世紀のアポロニオス・ディスコロスは統語の議論を深め、ラテン世界では4〜6世紀のプリスキアヌス『文法教程』が後世の規範となる。品詞、格、性・数の一致、語順と支配といった観点は、ここで教育制度と結びつき、長い時間をかけて「文法とは何を扱うか」の標準を形作った。
+
+ただし文法の古典的伝統は地中海世界に限られない。8世紀のアラビア語文法では、シーバワイヒの『アル＝キターブ』が語形変化と統語を精緻に論じ、語根と派生パターンを手掛かりに形態体系を捉える発想を深めた。中国でも、後漢の許慎『説文解字』（100年ごろ）に代表される文字学・音韻学が発達し、韻書や韻図の伝統が語の単位や音声の対立を分析する枠組みを育てた。これらの多様な伝統は、後世の比較・類型の視点から見れば、同じ「文法」という名の下で何を中心に据えるかが文化圏ごとに異なりうることを示している。
+
+そして一度定着した文法カテゴリは、長く「当たり前の物差し」として機能する。品詞や格のような概念は、教育や翻訳の実務を通じて広まり、別の言語を記述するときにも出発点になった。しかし、語が明確に区切れない言語、形態素が長く連鎖する言語、語順よりも接辞や一致が中心となる言語などに出会うたび、古典的枠組みは揺さぶられる。文法論と類型論の歴史は、この「既存の物差しを使いながら、その限界によって物差し自体を作り替える」循環として読むこともできる。
+
+### 2. 中世〜近世：規範文法から普遍文法へ
+
+中世ヨーロッパでは、ラテン語文法が学問の共通語を支える規範として維持され、論理学・神学の議論と接続した。13世紀のモディスタエ（思弁文法）は、言語形式と存在・思考の対応を探り、後の普遍文法的な関心の前史となる。近世に入ると印刷術と国民語の拡大が文法書を増やし、1492年にアントニオ・デ・ネブリハがスペイン語文法を著すなど、各地で「国語文法」が整備される。植民地拡大と宣教は、アメリカ先住民諸語やアジア諸語の記述も促した。こうした規範と実用の伝統の上に、1660年のポール＝ロワイヤル文法（アントワーヌ・アルノー／クロード・ランスロ）は、理性に根ざす普遍的原理を文法の背後に想定し、統語を意味・論理の表現として捉え直した。ここでの「普遍性」は、後世の統語理論にも再解釈されつつ受け継がれることになる。
+
+この時代の文法は、学術と統治の技術でもあった。宣教師が各地で作った文法書は、しばしばラテン語文法の枠を別の言語へ移植する形をとり、品詞や格といった概念が「どこまで通用するか」を露わにした。日本語を対象としたジョアン・ロドリゲス『日本大文典』（1604〜1608年）などは、その緊張関係を示す代表例である。また、ジョン・ウィルキンズ『哲学的言語と真の文字に向けた試論』（1668年）のような普遍記号の試みも現れ、語彙分類と統語の設計を結びつける発想が共有された。規範、記述、普遍性の追求は、この時期から相互に絡み合いながら前進していく。
+
+### 3. 19世紀：比較言語学と歴史文法、類型観の萌芽
+
+19世紀の比較言語学は、文法研究を規範から歴史へ押し広げた。フランツ・ボップの比較文法（1816年以降）や、ヤーコプ・グリム『ドイツ文法』（1819〜1837年）に代表される音韻対応・屈折体系の比較は、言語が時間の中で体系的に変化することを示した。アウグスト・シュライヒャーは言語系統樹モデルを提案し、新文法学派（1870年代）は「音韻法則に例外なし」を掲げて変化の規則性を追究した。形態論は、屈折や派生の細部が歴史を語る主要な証拠となり、統語もまた歴史的変化の対象として意識されていく。同時期、ヴィルヘルム・フォン・フンボルトは言語の多様性を精神活動の多様性と結びつけ、屈折の型や語形成の傾向といった「類型」への視点を開いた。比較研究と類型観は、後に言語類型論が「差異の体系化」を目指す際の両輪となる。
+
+世紀末には、比較と記述を統合する視点も現れる。ゲオルク・フォン・デア・ガーベレンツ『言語学』（1891年）は、歴史比較だけでなく、語順や構文の傾向といった類型的差異にも目配りし、統語を含む総合的な比較の方向性を示した。また、ボードゥアン・ド・クルトネや後の形態素概念の洗練は、音韻と形態の単位を理論的に切り分ける契機となった。こうした単位論の整備は、後に「形態」と「統語」の境界をどこに引くか、さらに言語間でその境界がどう揺れるかという、類型論的に重要な論点へつながっていく。
+
+さらにさかのぼれば、フリードリヒ・シュレーゲル（1808年）やアウグスト・シュレーゲルらの議論は、屈折の有無や語形成の型から言語を分類しようとする早い類型観を提示していた。そこではしばしば、屈折の豊かさが「完成度」と結びつけられるなど、価値判断も混じったが、少なくとも形態の相違を体系的に比べるという問題設定は定着した。のちにボアズが「言語はそれぞれの体系として理解すべきだ」と主張し、サピアが類型と分布を理論化していくためには、こうした初期の試行錯誤を批判的に乗り越える必要があった。類型論が説明志向の学問へ成熟する過程には、比較の欲望と評価の誘惑をどう切り離すかという倫理的課題も含まれていた。
+
+### 4. 20世紀前半：構造主義と記述文法の技法
+
+20世紀前半には、言語を同時態の体系として捉える構造主義が広がった。ソシュールの『一般言語学講義』（1916年刊行）は、共時態と通時態、ラングとパロールの区別を打ち出し、文法研究に「体系としての関係」を重視する視点を与えた。プラハ学派（トルベツコイ、ヤコブソン）は音韻論を洗練させ、機能と対立の考え方を文法一般へ波及させる。アメリカではブルームフィールド『言語』（1933年）を軸に、形態素の分布や直示的手続きに基づく分析が発展し、ハリスの分布分析や直接構成素分析が統語の分解法として定着した。こうした流れは、未知の言語を現地調査で記述しうる方法論と結びつき、形態論・統語論を「観察可能な形式の体系」として記述する伝統を強化した。後の理論が何を説明対象にするにせよ、記述技法の蓄積は土台として残り続ける。
+
+この時期に形成されたのは、理論というよりも「手続き」の文化である。形態論では、語を形態素へ分割すること（そしてどこまで分割できるか）が中心課題となり、派生と屈折、連語と複合、語と句の境界が争点になった。統語では、構成素の階層や置換テストなどが分析の共通語になり、テスニエール『統語論要綱』（1959年）に代表される依存構造の発想も、のちの統語形式化に影響を与える。さらにヤコブソンの有標性（markedness）概念は、形態範疇の対立や類型的非対称性を論じる語彙を提供し、構造主義の枠内で「比較可能性」を拡張する役割を果たした。
+
+ヨーロッパでは、イェルムスレウ『言語理論序説』（1943年）に代表される言理学（グロッセマティーク）が、意味と形式の対応関係を抽象化しようとし、アンドレ・マルティネの二重分節（1949年）は、音韻と形態・統語の結節点を捉える枠組みとして影響力を持った。アメリカではホケットらが記述手続きを整理し、パイクのタグメミクスは統語単位を機能と分布の両面から記述しようとした。こうした諸学派の相互作用は、のちに「形式理論」と「記述・機能」の境界が揺れ動く局面でも、分析の共通基盤として参照され続ける。
+
+### 5. 生成文法：統語理論の急速な展開
+
+1950年代後半、ノーム・チョムスキーは『文の構造』（1957年）と『統語理論の諸相』（1965年）で、言語能力（competence）を形式的にモデル化する方針を明確にし、句構造と変形を組み合わせて無限の文を説明する枠組みを提示した。統語は「文法の中心」として強く位置づけられ、形態論も屈折や一致が統語構造とどう結びつくかをめぐって理論化される。1980年代の統率・束縛理論（GB理論）、そして原理とパラメータの発想は、個別言語の差異を少数の選択肢で説明することを志向し、類型論的な関心とも接点を持った。1995年のミニマリスト・プログラムは、派生の経済性やインタフェース条件を前面に出し、説明の単純化を推し進めた。生成文法の影響は、賛否を含めて、統語研究の問いの立て方と検証文化を大きく変えた。
+
+生成文法の内部でも、形態論・語形成をどう位置づけるかは繰り返し再編された。チョムスキー（1970年）の「語彙主義仮説」は派生を語彙側へ寄せ、マーク・アロノフ『語形成』（1976年）は語の生産性や語彙規則を理論化した。1990年代には、ハリー／マランツ（1993年）の分散形態論が、形態を統語派生の産物として捉える立場を明確にし、屈折形態と統語構造の結びつきが再び焦点化される。類型論との往復も進み、ポリシンセシス（抱合）や一致体系の多様性は、何が「普遍的な計算」で何が「語彙や形態の選択」なのかという境界設定を揺さぶり続けた。
+
+統語の差異を説明する試みとして、原理とパラメータの発想は、類型論的観察を理論内部へ取り込む回路にもなった。ベイカー『言語の原子性』（2001年）や『ポリシンセシス・パラメータ』（1996年）に見られるように、少数の原理から多様な形態・統語のパターンを導こうとする研究は、比較と言語普遍の議論を活性化させた。他方で、カイン『反対称性』（1994年）のように語順を強く制約する提案は、類型的に知られる語順多様性をどう説明するかという論争を生んだ。生成文法が類型論から学ぶこと、類型論が生成的説明から学ぶことの双方が、時に緊張を伴いながら現在まで続いている。
+
+### 6. 形式意味論とインタフェース：形態・統語・意味の接続
+
+統語理論の成熟と並行して、統語が意味解釈へどう結びつくかが精密化された。リチャード・モンタギューは1970年代に自然言語を論理学の枠組みで扱う形式意味論を確立し、量化や述語の結合をラムダ計算で表現する道を開いた。一般化量化子理論（Generalized Quantifier Theory；1980年代）などを通じて、語順・句構造・スコープの相互作用が体系的に分析されるようになる。形態論でも、格標識、態、アスペクト、モダリティといった範疇が、意味と統語の双方にまたがる「インタフェース現象」として扱われた。チャールズ・フィルモアの格文法（1968年）や項構造の理論は、語彙的意味が統語実現を制約することを示し、LFG（語彙機能文法；キャプラン／ブレスナン）やHPSG（主辞駆動句構造文法；ポラード／サグ）など、複数の形式理論が「形態・統語・意味」を統合的に表現しようとした。文法論は、部品ごとの記述から、部品間の接続条件の理論へと軸足を移していく。
+
+意味論の側でも、談話や指示を扱うための拡張が進む。カンプ（1981年）の談話表象理論（Discourse Representation Theory, DRT）やハイム（1982年）のファイル変更意味論（File Change Semantics）は、代名詞照応や定性の解釈を、文を超えた文脈更新として捉えた。これらは統語の束縛理論や量化の議論と結びつき、照応・焦点・省略といった現象をインタフェースとして扱う土台になった。また、エヴィデンシャリティ（証拠性）や相体系のように、形態的に標示される意味区分が言語間で大きく異なる領域では、類型論の比較が「どこまでが意味の普遍で、どこからが文法化の選択か」を問う実験場となった。
+
+この領域の発展は、文法範疇の定義そのものにも影響する。ヴェンドラー（1957年）の事象類型、デイヴィドソン（1967年）の事象変項を導入する意味論は、態・アスペクト・副詞修飾の振る舞いを統一的に扱う道を開き、形態論で観察される相標識や助動詞体系を、意味論的区別として比較する素地を整えた。ベルナール・コムリー『アスペクト』（1976年）は、理論的意味区別と類型的分布を往復しながら体系化を行った代表例である。さらに会話的推意（conversational implicature；グライス、1975年）や語用論の発展は、統語的省略や焦点化が「文法規則」だけでは説明しきれないことを示し、文法の境界を再び押し広げた。
+
+### 7. 機能主義・認知・使用基盤：談話と変化からみた文法
+
+一方で、文法を使用とコミュニケーションの中で捉える潮流も強まった。ハリデーの選択体系機能言語理論（Systemic Functional Linguistics, SFL）は、統語を意味機能（表現・対人・テクスト）と結びつけ、主題（テーマ）や情報構造を分析の中心に据えた。ギヴォンは談話の流れや処理負荷を視野に入れ、「今日の統語は昨日の談話であり、明日の形態である」といった形で、文法と使用・変化の連続性を強調した。文法化研究ではミエ（1912年）が概念を提示し、のちにホッパー／トラウゴット（1993年）らが変化の道筋を精緻化した。認知言語学ではラングアッカー『認知文法』（1987年）が象徴単位としての構文を重視し、構文文法（フィルモア、後にゴールドバーグ『構文文法』（1995年））は、語彙と統語の境界を相対化した。ここでは、類型論が提供する多様なデータが、理論の検証と一般化の重要な資源となる。
+
+機能主義的潮流の重要な貢献は、「なぜその形がその意味で使われるのか」を、談話慣習や認知制約から説明しようとした点にある。リー／トンプソン（1976年）が提起した主題優勢言語（topic-prominent language）の議論は、語順や格標識だけでは捉えきれない統語と談話の結びつきを示し、言語間比較に「情報構造」という軸を持ち込んだ。ジョーン・バイビーらの使用基盤モデルは、頻度と類推が形態の保存や変化を左右することを、屈折パラダイムの不規則性など具体的現象で説明した。こうした説明は、類型論が見出す普遍傾向を「機能的動機づけ」として読み替える道を提供し、理論と比較を往復する回路を太くした。
+
+この回路は、文法化と類型研究の相互強化としてとりわけ目に見える。たとえば、未来や完了、受動や使役、補文標識などがどのような語彙項から発達しやすいかは、多数言語の比較から「経路」として描けるようになり、その経路が統語構造や形態標識の配置をどう変えるかが議論される。機能主義はここで、単なる「頻度の記述」にとどまらず、話し手・聞き手の推論や注意配分、談話の設計が、形態と統語の安定性をどう左右するかという説明へ踏み込んだ。結果として、類型論の普遍は「静的な規則」ではなく、「変化の中で繰り返し現れる解」として理解される方向が強まった。
+
+### 8. 言語類型論の体系化：普遍性と差異のあいだ
+
+言語類型論が「分野」として明確になる転機の一つは、ジョセフ・グリーンバーグによる1963年の語順普遍性研究である。少数言語の例示ではなく、サンプルにもとづいて語順・語彙配置・形態標識の相関を示し、含意的普遍（AならばB）という形で一般化する方法を提示した。この系譜は、バーナード・コムリー、ウィリアム・クロフト、マシュー・ドライヤー、マルティン・ハスペルマスらの研究に継承され、語順類型だけでなく、格配列（主格・対格／能格・絶対格）、能動・不活性、分裂配列、指示・照応、相・アスペクト、音韻と形態の相互作用など、多くの領域に広がった。形態類型ではサピア『言語』（1921年）が分析的・総合的、融合的・膠着的といった観点を整理し、複合語形成や抱合、複雑な一致体系などの比較が進んだ。類型論は「普遍性の発見」と同時に、「普遍性が成立する条件」を問う学問として成熟していく。
+
+方法論としての成熟も大きい。類型論は、系統（同祖性）と地域接触（言語圏・言語接触）を切り分ける必要に直面し、バルカン言語連合やメソアメリカ言語圏などの研究を通じて、いわゆる「言語圏（Sprachbund）」の概念を洗練させた。さらに、キーナン／コムリー（1977年）の関係節の到達可能性階層、シルヴァースタイン（1976年）の有生性階層、目的語標示や一致の階層効果など、含意的普遍を具体的な制約として表現する道具が増えた。こうした階層や普遍は、形態論・統語論・意味論の境界を横断し、比較の焦点を「単なる分類」から「制約条件の同定」へと移していった。
+
+加えて、形態と統語の相関を捉える枠組みも豊かになった。ニコルズ（1986年）の主要部標示型／従属部標示型（head-marking / dependent-marking）は、格標識と一致の配置を類型化し、語順や句構造との相互作用を議論する足場を与えた。能格・主格対立をめぐる研究は、配列が固定的な二分ではなく、時制・アスペクトや人称階層、談話的顕著性に応じて分裂しうることを明らかにし、統語理論の「抽象的主語・目的語」概念にも再検討を迫った。語順類型も、単なる並びの分類から、処理負荷、情報構造、文法化の経路（たとえば助詞・前置詞の発達）を踏まえた説明へと広がり、類型論は「分布の地図」から「変化の物語」へも接続していった。
+
+### 9. 記述文法とデータ駆動：フィールドワーク、コーパス、データベース
+
+類型論の一般化を支えるのは、個別言語の厚い記述である。フランツ・ボアズやサピア以来、フィールドワークに基づく文法記述は、分析枠組みを言語に合わせて調整しながら、形態・統語・談話を総合的に描く「レファレンス文法」として蓄積されてきた。20世紀末からは、コーパス言語学と計算機資源が文法研究の基盤を変える。2005年公開のWALS（World Atlas of Language Structures）は類型的特徴を体系化し、サンプリングと比較の作法を普及させた。同時に、注釈付きコーパスやツリーバンク、近年ではUniversal Dependencies（2014年以降）のような共通スキーマが、統語比較の新しい道具となった。統計・計量、系統推定、地理情報との連携も進み、仮説を反復的に検証できる環境が整う一方、データの偏り、系統・接触の統制、アノテーションの前提差といった方法論上の課題も明確になった。
+
+また、記述と言語資源化の現場では、いわゆる言語ドキュメンテーション（ドキュメンタリー言語学；ヒンメルマン、1998年以降）が、録音・映像・注釈・辞書・文法を一体として構築する方針を打ち出した。Leipzig Glossing Rules（LGR、2000年代に公開）に代表されるグロス表記の標準化は、形態素分割と統語分析を比較可能にする実務的基盤となる。さらに、系統推定や拡散モデルを用いた計量的類型論は、データベースと結びついて急速に広がったが、その一方で、分析カテゴリの粒度、調査語彙の選び方、未記述領域の多さといった「データ作法」そのものが研究対象化されるようになった。
+
+データ駆動の流れは、理論の検証だけでなく、理論の生成にも影響した。大規模コーパスにもとづく頻度分析は、形態交替や語順変化の予測要因を具体化し、アノテーション付きデータは、文法現象を再現可能な単位で切り出す文化を育てた。少数言語に対しても、形態解析器や依存解析器を作る試みが進み、記述と計算資源の整備が相互に加速する局面が現れている。ただし、その前提となるタグ集合やラベル付けが特定の理論観を暗黙に含みうる点は、類型論が常に自覚してきた「比較可能性の条件」と同型の問題として、改めて浮上している。
+
+こうした状況の中で、研究者コミュニティは「参照点」を共有する努力も続けてきた。WALSのようなデータベースは、特徴定義と出典管理を可視化し、議論の土俵を揃える役割を担ったが、同時に「どの特徴を、どの粒度で切り出すのか」という設計判断が、比較結果を左右することも明確にした。だからこそ、厚い文法記述（現地での用例と分析）と、横断的な特徴表（比較のための抽象）を往復し、両者のズレを埋めていく実践が、データ駆動時代の文法論・類型論の核心になっている。
+
+### 10. 現代の課題と展望：多様性の保全と理論の統合へ
+
+21世紀の文法論は、言語消滅の加速という現実と切り離せない。記録と記述は単なるデータ収集ではなく、共同体との協働、倫理、教育資源化を含む営みとして再定義されつつある。理論面では、生成文法・形式意味論・機能主義・認知的アプローチ・類型論が、それぞれの強み（形式的厳密さ、説明範囲、使用と変化の洞察、比較の方法）を意識しながら接近している。計算モデルの発展は、形態解析や構文解析から大規模言語モデルに至るまで、文法的パターンの学習可能性を実験する場を提供するが、学習データの偏りや「もっともらしさ」と説明の混同にも注意が要る。今後の焦点は、豊かな個別記述と大規模比較を往復し、形態・統語・意味・談話・変化を一つの連続体として捉えることにある。普遍性を急がず、差異の背後にある制約条件を丁寧に言語化するところに、文法論と言語類型論の次の成熟がある。
+
+また、近年は心理言語学・言語獲得研究との接点も重要になっている。語順の処理負荷、形態標識の冗長性、一致や格が曖昧性解消に果たす役割などは、実験やコーパスの処理指標によって検証され、類型論的傾向を「認知的制約」として解釈する試みが増えた。ダン・スロビンの「話すための思考」や、トマセロらの使用基盤の獲得理論は、統語・形態が固定的なルール体系ではなく、使用と学習の相互作用から立ち上がる側面を強調する。言語類型論は、こうしたモデルが特定言語に閉じないかを点検するための比較基盤を提供し、逆に獲得・処理研究は、類型論が見出す普遍の「原因候補」を具体化する手がかりになる。
+
+この「往復」を支えるためには、理論的主張がどのデータに基づくのかを明示し、別の言語・別のコーパスで追試できる形に整える必要がある。理論は単一の枠組みに収斂するとは限らないが、少なくとも比較の単位（構文、形態素、語彙項、談話機能）をどう定義したかを共有しなければ、普遍性も差異も評価できない。AI時代の文法研究は、巨大な言語使用の痕跡を利用できる一方で、書き言葉中心の偏り、少数言語の欠落、学習過程の不透明さという新しい制約も抱える。だからこそ、現場での記述、理論的抽象、計量的検証を同じ循環の中に置き直すことが、これからの文法論の「歴史」を先へつなぐ条件になる。その循環が続く限り、形態論・統語論・類型論は、古い枠組みを活かしつつ更新し、言語という現象の理解をさらに押し広げていく。
