201の分野の歴史を追加

--- a/2-歴史/20-歴史/201／208-総記/201-歴史学/201-歴史学.md
+++ b/2-歴史/20-歴史/201／208-総記/201-歴史学/201-歴史学.md
@@ -7,3 +7,132 @@
 
 ## 分野の歴史
 
+### 1. 歴史学の射程：記録・記憶から「説明する知」へ
+
+人は古くから、出来事を語り継ぎ、系譜を整え、暦に沿って記録してきた。しかし歴史学が対象にするのは、単なる「昔話」や「年代の並び」ではない。残された断片（文字・図像・遺物・口承・統計・映像）を史料として位置づけ、その成立事情と偏りを吟味し、他の証拠と突き合わせながら、過去に起きたことをできるだけ筋道立てて説明する営みである。そこでは、史料を読む技術（批判・解釈）と、読み取ったものを語りとして提示する技術（叙述）が不可分になる。
+
+この三位一体は、歴史学の公共性とも結びつく。歴史叙述は国家や宗教、共同体の正統性を支えうる一方で、神話化や宣伝の道具にもなりうる。だからこそ歴史学は、何を証拠として採用し、どこまで推論し、どこからを不確実として留保するかを明示しようとしてきた。歴史学の歴史とは、この「証拠の扱い方」と「語り方」をめぐる、長い自己点検の積み重ねでもある。
+
+また、歴史学は「過去そのもの」を直接観察できないという制約を抱える。残る史料は偶然と権力によって選別され、沈黙している人びとや、記録を残せなかった集団が常に存在する。そのため歴史家は、史料の欠落や偏りを前提に、問いの立て方と比較の枠組みを工夫しながら、可能な限り慎重に説明を組み立てる必要がある。R・G・コリングウッドが『歴史の観念』（1946年）で強調したように、歴史は「答え」ではなく、問いを通じて再構成される営みでもある。
+
+その際、歴史学は現在の価値観を過去へ投影してしまう「現在主義」や、概念の時代錯誤（アナクロニズム）に常に注意を払う。一次史料と二次文献の区別、同時代語彙の意味の復元、当事者が置かれた選択肢の範囲の把握は、過去を「理解可能」にするための最低限の手続きである。歴史学の方法は、過去を固定的な真理として確定するためというより、説明の妥当性をめぐる議論を共同体として継続するために鍛えられてきた。
+
+### 2. 古代の歴史叙述：探究としての歴史と、正統化としての歴史
+
+古代ギリシアでは、ヘロドトスが諸地域を歩き聞き取りを重ねた『歴史』で「探究（ヒストリア）」を物語として編み、戦争や慣習を比較しながら原因を問う姿勢を示した。続くトゥキュディデスは『ペロポネソス戦争史』で、目撃証言の吟味や演説の構成を通じて、偶然や神意よりも人間の判断と利害に注目し、政治と戦争を分析的に記述しようとした。ここには、出来事を語るだけでなく「なぜそうなったか」を論じる歴史叙述の原型が見える。
+
+ローマではリウィウスやタキトゥスが、共和政から帝政へと移る政治の変化を道徳的教訓や権力批判と結びつけて描いた。一方、中国では司馬遷が『史記』（前漢末の紀元前1世紀）で、帝王の本紀と列伝を組み合わせ、人物と制度の相互作用を立体的に示した。班固『漢書』に代表される正史編纂は、記録の集積と編集の規範を整え、史官制度と結びついた「国家による歴史」の様式を確立していく。
+
+日本でも、8世紀初頭の『古事記』（712年）や『日本書紀』（720年）が王権の系譜と神話を編み直し、対外関係の中で自らの位置づけを語った。古代の歴史叙述は、探究と正統化という二つの動機を併せ持ち、その緊張関係が後世の歴史学の課題を先取りしていたと言える。
+
+古代の歴史叙述が残したもう一つの遺産は、ジャンルの分化である。ポリュビオスの「普遍史」は地中海世界の連関を描こうとし、ヨセフスはユダヤ戦争を叙述して帝国と属州の関係を記録した。地誌、伝記、年代記、王朝史といった形式は、後の時代に「何を歴史と見なすか」をめぐる選択肢として受け継がれ、歴史学が政治だけでなく社会や文化へ領域を広げる足場にもなった。
+
+とりわけ中国史学では、司馬遷以来の紀伝体が人物と制度の絡み合いを描く形式として継承される一方、編年体も発達し、政治運営の教訓を引き出す「鑑」として歴史が用いられた。司馬光『資治通鑑』（1084年）はその代表であり、過去の政治判断を時系列で並べて比較可能にすることで、歴史叙述を統治の知へ接続した。歴史が「研究対象」であると同時に「社会の自己理解の道具」でもあるという二重性は、古代から一貫して歴史学の足元にある。
+
+### 3. 中世の歴史観：普遍史・年代記・共同体の記憶
+
+中世ヨーロッパでは、キリスト教的時間観が歴史叙述の枠組みを形づくった。アウグスティヌス『神の国』（5世紀）に象徴されるように、世界史は救済史として理解され、年代記や普遍史は創世から終末へと至る大きな筋を前提に編まれた。修道院や司教座教会は写本の制作・保存を担い、証書や土地台帳の管理を通じて、文書の権威と実務が結びついていく。
+
+同時に、イスラーム世界では広域の交易と学問ネットワークを背景に、伝承の連鎖（イスナード）を重視する学問や、王朝の興亡を整理する歴史叙述が発達した。イブン・ハルドゥーンは『歴史序説（ムカッディマ）』（1377年）で、遊牧と定住、連帯（アサビーヤ）と国家形成の循環を論じ、出来事の背後にある社会の仕組みを説明しようとした点で、後の社会科学的歴史学にも通じる射程を示した。
+
+日本では『六国史』に代表される官撰史書の後、武家政権の成立とともに、日記・記録・軍記物語など多様な文体が並立した。『吾妻鏡』や『太平記』は、政治権力の正統性や合戦の意味を語り直し、同時代の経験を共同体の記憶として定着させた。中世史学は、神意や道徳的秩序を前提にしつつも、文書実務の蓄積を通じて史料世界を厚くしていった。
+
+この時代の叙述には、過去を「いま」の秩序に結びつけ直す機能が色濃い。たとえば北畠親房『神皇正統記』（14世紀）は王統の正統性を歴史によって支えようとし、慈円『愚管抄』（13世紀）は仏教的歴史観と政治の現実を交差させながら、変転する時代を意味づけた。こうした作品は、史料の厳密さという点では近代歴史学と異なるが、歴史叙述が同時代の危機に応答し、政治理念や共同体像を提示する場であったことを示している。
+
+他方で、年代記的な叙述は単なる羅列ではなく、時間を整える技術でもあった。ベーダ『英国民教会史』（731年）は教会史を年代と証言の枠に収め、出来事を「いつ」「どこで」「誰が」という形で接続していく。暦法や年代計算、文書作成の定型化は、後の史料批判が依拠する前提を整えた。中世の歴史学は、理論よりも実務を通じて、史料世界の秩序化を進めたのである。
+
+### 4. ルネサンス〜啓蒙：批判の技術と、世俗的な因果の発見
+
+近世に入ると、古典復興と国家形成が歴史叙述を大きく変える。人文主義者は古典語の読解と写本比較を武器に、テクストの成立を問い直した。ロレンツォ・ヴァッラは「コンスタンティヌス寄進状」が偽作であることを15世紀半ばに論証し、権威を支える文書そのものを批判の対象に置いた。この文献学的批判は、後に証書学（ジャン・マビヨン『外交文書論』、1681年）などの方法として体系化され、史料の真偽と年代を判定する技術を洗練させていく。
+
+啓蒙期には、歴史は神意の筋書きから徐々に離れ、制度や風俗、経済の変化を手がかりに語られるようになる。ヴォルテールは『風俗試論』（1756年）で政治史中心の叙述を批判し、文化や宗教を含む広い文明史を構想した。ジャンバッティスタ・ヴィーコは『新学』（1725年初版）で、人間が作った社会の歴史には固有の法則があると論じた。エドワード・ギボン『ローマ帝国衰亡史』（1776〜1788年）は、宗教・政治・軍事の複合的要因を叙述に組み込み、世俗的な因果説明の可能性を示した。歴史学は、批判の技術と説明の志向を同時に獲得していく。
+
+同時にこの時期は、「歴史とは何のために語られるのか」という自己意識が強まった時代でもある。ジャン・ボダン『歴史を容易に知る方法』（1566年）は、史料の比較と批判の必要を論じ、モンテスキュー『法の精神』（1748年）は制度と気候・風土の関係から社会の多様性を説明しようとした。カントもまた1784年に「世界市民的観点から見た普遍史の理念」を提示し、歴史の中に目的論的な筋を読み取ろうとした。近代歴史学は、批判的手続きの整備と並行して、歴史哲学的な大きな物語ともせめぎ合いながら成熟していく。
+
+そしてこの批判精神は、国家の「記憶装置」を整備する運動とも連動した。貴族や官僚が古文書を収集し、王朝や都市が自らの起源を語り直すために年代記や系譜を整える。古物収集（古物学）や碑文研究は、史料を「読む」以前に「守り集め分類する」営みとして、博物館や図書館、文書館の成立を後押しした。近世の歴史学は、方法論だけでなく、史料が蓄積される社会的基盤を同時に作り上げていった。
+
+### 5. 19世紀：専門化、アーカイブ、実証主義
+
+19世紀は、歴史学が大学制度の中で職業として成立し、方法が「訓練可能な技術」として整備された時代である。国民国家の形成は、国史編纂や史料収集を国家的事業として推進し、文書館（アーカイブ）の整備が進んだ。ここで鍵となるのが史料批判である。史料がいつ、誰によって、どの目的で作られたかを問う外的批判と、内容の整合性や語りの立場を検討する内的批判が組み合わされ、証拠の扱いに規範が与えられた。
+
+この潮流を象徴するのがレオポルト・フォン・ランケである。ランケは「かつて実際に起こったように（wie es eigentlich gewesen）」という姿勢で知られ、史料の精査と叙述の抑制を通じて、歴史を道徳談義や哲学の寓意から切り離し、経験的研究として自立させようとした。ベルリン大学のゼミナールに代表される訓練は、史料読解、注記、引用、検証の作法を共有し、歴史家共同体の標準を形成した。
+
+ただし、この「実証」は価値中立を自動的に保証するわけではない。何を史料として残し、何を中心に叙述するかは、政治的・社会的条件と結びつく。19世紀の専門化は、歴史学の権威を高める一方で、国家と学問の距離を問い続ける課題も生んだ。
+
+方法論の面では、解釈の理論も整えられた。ヨハン・グスタフ・ドロイゼンは『歴史学綱要（ヒストリック）』で理解（Verstehen）を強調し、ヴィルヘルム・ディルタイは「精神科学」としての歴史学を構想して、自然科学的説明とは異なる解釈の論理を位置づけた。史料批判と解釈学は対立するものではなく、史料を「どのように読めばよいか」を支える二本柱として、19世紀以降の歴史学の標準を形づくった。
+
+同時に、歴史学の社会的機能そのものも批判的に問い返された。フリードリヒ・ニーチェ『歴史のための利と害』（1874年）は、歴史が過剰な記憶として生を圧迫し、現在の創造性を奪う危険を指摘した。歴史学が国家の物語や進歩史観と結びつくほど、その権威は増すが、同時に「何を忘れているのか」「誰の視点が排除されているのか」という問いも強まる。19世紀の歴史学は、専門化の成果を抱えながら、自己批判の種もまた内包していた。
+
+この時代、歴史家が「個人の教養人」から「専門職」へ変わるにつれて、知の生産の場も整備された。学会や専門誌、大学の講座は、研究成果を共有し、批判し合う回路を作り、引用や注記の規範は「どこまでが証拠で、どこからが解釈か」を可視化するための共通言語になった。史学史が編まれ、方法論が講義されるようになるのも、歴史学が自らの作法を再生産する装置を持ったことを意味する。
+
+しかし同時に、史料の集積が帝国の拡張や植民地支配と絡み合うこともあった。収集される文書や遺物は、しばしば支配の視線によって編成され、他者の社会は「記述される対象」として固定化される。19世紀の専門化は、歴史学を強くしたのと同じだけ、歴史学が依拠するアーカイブの政治性をも深くした。後の世代が史料批判を拡張し、「史料が生まれる場」そのものを問うようになる背景には、この二面性がある。
+
+### 6. 日本近代史学：制度化と方法の受容、そして緊張
+
+日本では明治期に近代的大学制度が整備され、歴史研究は講座と学会、史料編纂事業によって制度化されていく。史料の収集・翻刻・編纂は研究基盤そのものであり、編年体の史料集成は、後の研究を支えるインフラとなった。久米邦武は実証的研究の導入と史料重視の姿勢で知られ、白鳥庫吉は東洋史学の枠組みを構築し、内藤湖南は「唐宋変革」をめぐる議論などで中国史の時代区分に新たな視点を提示した。
+
+一方で、国民国家が求める「国史」と、学問としての歴史学の間には常に緊張があった。津田左右吉は文献批判によって古代史料の成立を問い、神話的叙述の扱いをめぐって議論を引き起こした。近代日本の歴史学は、西洋の実証的方法を参照しつつも、帝国の拡大や教育政策、検閲といった社会条件の中で、何を問い、何を語れるのかをめぐる葛藤を抱えながら展開した。
+
+さらに視野を広げれば、日本の歴史叙述には近世以前から豊かな蓄積があった。水戸藩の徳川光圀が推進した『大日本史』編纂は、儒教的な道徳観と史料収集を結びつけ、長期にわたる編纂事業として後世に影響した。新井白石の史論や、頼山陽『日本外史』（19世紀）に見られる叙述は、政治的主張と史実の配置が密接に絡み合う典型でもある。近代史学の制度化は、こうした在来の史学・国学・儒学の伝統を一挙に断ち切ったのではなく、継承と批判を繰り返しながら、「学」としての方法へ編み直していった。
+
+制度化の局面では、史料の整備と公開が研究の裾野を決めた。史料編纂所が刊行する『大日本史料』や『大日本古文書』のような史料集成は、個々の研究を支える共通基盤となり、同時に「どの史料が代表的と見なされるか」という選別も伴った。辻善之助の仏教史研究に見られるように、近代日本の歴史学は、国家中心の叙述に回収されがちな史料世界を、宗教・社会・思想の領域へ押し広げる努力も重ねていく。
+
+### 7. 20世紀前半：社会へ開く歴史学（マルクス主義とアナール）
+
+20世紀に入ると、政治史中心の叙述を相対化し、社会の構造や長期的変化を問う方法が台頭する。マルクスとエンゲルスの思想を背景にしたマルクス主義史学は、生産様式や階級関係、経済の変動を歴史の基層として捉え、革命や国家の変化をその上に位置づけた。史学の関心は、支配者の意思決定だけでなく、労働・生活・社会運動へと広がっていく。
+
+フランスでは1929年に創刊された『アナール』を核に、マルク・ブロックとリュシアン・フェーヴルが歴史学の地平を拡張した。ブロックは比較史と社会の連関にこだわり、『触れる王たち』（1924年）などで信仰や儀礼を歴史の対象に据えた。フェーヴルは宗教改革期の精神風土を扱い、政治史の背後にある思考様式を問うた。フェルナン・ブローデル『地中海』（1949年）は「長期持続」を掲げ、地理・経済・制度がゆっくりと形づくる時間と、事件が動かす時間を重ね合わせて描いた。歴史学は、出来事の連続から社会の仕組みへと視点を移し、隣接諸科学との対話を深めていく。
+
+アナールの革新は、単に対象を広げたことだけではなく、学際性を研究手続きに組み込んだ点にある。地理学（ヴィダル・ド・ラ・ブラーシュ）や社会学（デュルケーム学派）の影響を受けつつ、統計・地図・民俗・言語といった多様な材料を同じテーブルに載せ、地域と制度、心性と経済を往復する説明を試みた。ブロックの遺稿『歴史のための弁明』は、歴史学が「現在の問い」によって駆動されること、そして比較と批判によって初めて過去が理解可能になることを、戦時下の経験とともに語りかける。ここで歴史学は、事件の記述から社会の分析へ、さらに学問の自己反省へと、重心を移していった。
+
+こうした流れは、歴史学を「社会科学に近い言語」で語る試みも促した。マックス・ウェーバーが提示した理念型や因果帰属の考え方は、複雑な歴史過程を説明する際の道具立てとなり、人口史・家族史・都市史などの領域では統計と史料読解の往復が進んだ。歴史学が扱う時間は一つではなく、出来事の時間、制度の時間、環境の時間、記憶の時間が重なり合う。20世紀前半の方法論的革新は、その複層的時間を捉えるための語彙を増やしていったと言える。
+
+### 8. 戦後の拡張：計量、口述、民衆、そして公共性
+
+第二次世界大戦後、歴史学は研究対象と方法をさらに広げた。統計資料やデータを用いる計量史学・クリオメトリクスは、経済史において仮説検証型の研究を促し、ロバート・フォーゲルやダグラス・ノースらの議論は、歴史説明の形式そのものを刺激した。他方、文字史料の外側にある経験を拾い上げるため、口述史も発展する。アラン・ネヴィンズが1948年に始めたコロンビア大学のオーラル・ヒストリー事業は、制度的な収集の先駆けとなった。
+
+社会史や「下からの歴史」は、名もなき人びとの生活や労働、家族、地域を主題化した。E・P・トンプソン『イングランド労働者階級の形成』（1963年）は、階級を統計的区分ではなく経験と文化の生成として描き、歴史叙述の語り口にも影響を与えた。日本でも戦後史学は、戦争責任や国家との距離をめぐって自己点検を迫られ、歴史教育や教科書をめぐる対立の中で、研究成果を社会へどう届けるかという課題に直面した。歴史学の公共性は、研究室の外で試され続けたのである。
+
+この拡張は、研究対象の「スケール」を自在に変える方向にも進んだ。エマニュエル・ル・ロワ・ラデュリ『モンタイユー』（1975年）は一つの村の信仰と生活を精密に再構成し、カルロ・ギンズブルグ『チーズとうじ虫』（1976年）は異端審問記録から一人の粉屋の宇宙観を描き出した。ナタリー・Z・デイヴィス『マルタン・ゲールの帰還』（1983年）は、裁判記録と社会史を結びつけ、個人の語りと共同体の規範が交差する場を示した。マクロな構造史とミクロな事例研究は対立するのではなく、互いの盲点を照らす補助線として併存するようになった。
+
+日本でも、宮本常一『忘れられた日本人』（1960年）が聞き書きによって地域の記憶を掘り起こし、網野善彦は中世社会を農民中心の像から解き放って、多様な生業と権利の世界を描いた。家永三郎の教科書裁判（1965年提訴）は、学術研究と教育・国家の関係を法廷の場へ持ち込み、歴史叙述の公共性を改めて問う出来事となった。
+
+加えて、ジェンダー史は「政治・経済・戦争」といった大文字の歴史に、家族・身体・再生産労働・性規範を結びつけて問い直した。ジョーン・W・スコットは1986年に、ジェンダーを歴史分析の有効なカテゴリーとして提示し、差異の制度化が権力関係と結びつくことを論じた。歴史学は、対象を増やすだけでなく、問いの前提そのものを更新しながら、誰が歴史の主体として描かれてきたのかを再検討していく。
+
+### 9. 「言語論的転回」：物語、表象、そして実証の再定義
+
+20世紀後半には、歴史叙述そのものの言語的・物語的性格が正面から問われるようになる。ミシェル・フーコーは『言葉と物』（1966年）や『知の考古学』（1969年）で、知が成立する枠組み（エピステーメー）や言説の秩序を分析し、歴史を「思想の進歩史」ではなく、断絶と編成の問題として描き直した。ヘイドン・ホワイト『メタヒストリー』（1973年）は、歴史叙述が比喩やプロットの選択を通じて意味を構成することを論じ、歴史家の「語り方」が中立ではありえないことを突きつけた。
+
+こうした議論は、実証主義を単に否定するのではなく、証拠と叙述の関係を精密化する方向にも作用した。ピエール・ノラ『記憶の場』（1984〜1992年）に代表される記憶研究は、過去そのものだけでなく、社会が過去をどう記憶し、記念し、忘却するかを主題化した。歴史学は、史料の外側にある表象の政治を見据えつつ、なお証拠に基づく説明の可能性を探り、客観性を「手続きとしての客観性」へと更新していった。
+
+ここで争点になったのは、「語りが構成的である」ことと、「何でも語りの自由でよい」ことをどう区別するかである。カルロ・ギンズブルグは、歴史家が手がかりから推論する「徴候（インデックス）」の論理を強調し、証拠に基づく推論の厳密さを擁護した。また、証言史料が重みを増す領域、たとえばホロコーストの歴史では、証言の倫理と検証の作法が同時に求められた。プリモ・レーヴィ『これが人間か』（1947年）や、クロード・ランズマンの映画『ショアー』（1985年）が喚起した問いは、歴史学が「語れなさ」と向き合いながら、それでも説明責任を放棄できないことを示している。
+
+さらに、史料の「沈黙」がどのように作られるかを分析する視点も重要になった。ミシェル＝ロルフ・トゥルイヨ『過去を沈黙させる』（1995年）は、出来事が記録され、保存され、語られる過程そのものに権力が介在することを示し、アーカイブを中立な倉庫ではなく、選別と排除の装置として捉え直した。ポストコロニアルな問題意識は、この議論と結びつき、植民地支配のもとで消された声や、中心の視線が作ったカテゴリーを、史料批判の対象へ組み込み続けている。
+
+### 10. 21世紀の歴史学：グローバル化とデジタル化の中で
+
+21世紀の歴史学は、世界の結びつきそのものを研究対象に据える。グローバル・ヒストリーやコネクテッド・ヒストリーは、国家単位の内在的叙述だけでは捉えにくい移動・交易・帝国・疫病・環境変動を、複数地域の相互作用として描こうとする。ポストコロニアル研究は、エドワード・サイード『オリエンタリズム』（1978年）以来、知の編成と支配の関係を問い、周縁と中心の視線の非対称を歴史叙述の中で可視化してきた。ジェンダー史や環境史も、権力や社会構造の基層にある前提を掘り起こし、歴史学の問いの立て方を変えている。
+
+同時にデジタル・ヒストリーは、史料のデジタル化、全文検索、GIS、ネットワーク分析などを通じて、これまで扱いにくかった規模の資料を研究可能にした。オープンアーカイブの拡大は研究の再現性と公共アクセスを高める一方、個人情報や文化財の取り扱い、データの偏り、アルゴリズムが生む不可視の前提といった倫理的課題も伴う。歴史学は今、証拠を増やすだけでなく、増え続ける証拠と社会的期待の中で、説明の責任をどう果たすかを問われている。
+
+環境史や気候史が注目される背景には、人間史を自然史から切り離せないという認識の強まりがある。地球環境の急激な変化を示す概念として「人新世（アントロポセン）」が提起され、産業化・帝国・資源採取・感染症といったテーマが、国家史の枠を越えて結び直されている。こうした新しい大枠の議論は、古典的な実証や地域研究の蓄積と接続して初めて説得力を持つため、現場の史料読解と大きな説明枠を往復する力量が改めて求められている。
+
+さらに、デジタル化が進むほど「検索できる史料」だけが研究対象になりやすいという落とし穴もある。OCRの誤り、メタデータの欠落、手書き史料の読みにくさは、研究の偏りとして表面化しうる。加えて、生成AIや合成映像の普及は、史料の真偽判定や出典管理の重要性を一段と高めた。歴史学は、古くからの史料批判を現代的にアップデートしつつ、公共圏での知の流通に責任を持つ学問として、新たな段階に入っている。
+
+その一方で、歴史学の成果が社会に届く経路も多様化した。博物館展示や記念碑、記念日の制定、観光と「物語化された過去」、SNS上の歴史情報など、公共圏には歴史が溢れている。ここで歴史家に求められるのは、学術的正確さを守りながら、専門外の読者にも検証可能な形で根拠を示し、異なる記憶や価値観がぶつかる場で対話を成立させる技術である。いわゆるパブリック・ヒストリーは、歴史学の外にあるのではなく、歴史学が自らの公共性を自覚することによって成立する領域だと言える。
+
+結局のところ、歴史学の変化は「新しい理論が古い理論を置き換える」だけでは進まない。史料の追加、社会の問いの変化、研究者共同体の規範、そして読者の期待が重なり合い、説明の枠組みが少しずつ更新される。歴史学が守り続けてきた核は、過去を単に称揚するのでも断罪するのでもなく、証拠に即して理解可能な形へ編み直し、その限界も含めて提示する姿勢である。その姿勢こそが、時代ごとに形を変えながらも、歴史学を歴史学たらしめてきた。
+
+<!-- 
+アウトライン
+- 1. 歴史学の射程：出来事の記録・記憶・伝承から、「過去」を説明する知の営みへ（史料／解釈／叙述の三位一体）
+- 2. 古代の歴史叙述の成立：ギリシア（ヘロドトス、トゥキュディデス）／ローマ（リウィウス、タキトゥス）／中国（司馬遷『史記』）／日本（『古事記』『日本書紀』）にみる目的（教訓・正統化）と文体
+- 3. 中世の歴史観と編年：キリスト教世界の年代記・普遍史、修道院と文書管理、イスラーム史学（イブン・ハルドゥーンの社会理論）など「神意／王権／共同体」の枠組み
+- 4. ルネサンス〜啓蒙の転回：人文主義の文献学と偽書批判（ロレンツォ・ヴァッラ）、古典復興と国家の古代化、啓蒙史学（ヴォルテール、ヴィーコ、ギボン）による「文明」「進歩」「普遍史」の構想
+- 5. 19世紀の専門化と実証主義：国民国家と歴史叙述の結びつき、アーカイブの整備、史料批判（外的・内的批判）と「史料に語らせる」（レオポルト・フォン・ランケ）を軸にした職業的歴史家の成立
+- 6. 日本近代史学の形成：明治期の大学制度と史料編纂（史料編纂所）、久米邦武・白鳥庫吉・内藤湖南らの方法、国史／東洋史／西洋史の分化と「学」としての制度化
+- 7. 20世紀前半の方法論的革新：マルクス主義史学（階級・生産様式）と社会経済史、アナール学派（マルク・ブロック、リュシアン・フェーヴル、フェルナン・ブローデル）による長期持続・心性・地域の重視
+- 8. 戦後の拡張と論争：計量史学・クリオメトリクス、口述史、生活史・民衆史、そして日本史学における戦後史学の自己点検（歴史学の社会的責任、国家と歴史叙述の緊張）
+- 9. 「言語論的転回」と表象の問題：ヘイドン・ホワイトの物語論、ミシェル・フーコーの知の編成、ポストモダン批判と実証主義の再定義（客観性／因果／説明の更新）
+- 10. 21世紀の歴史学：ジェンダー史・環境史・帝国史／ポストコロニアル、グローバル・ヒストリーとコネクテッド・ヒストリー、デジタル・ヒストリー／オープンアーカイブの可能性と倫理（データ・証拠・公共性）
+-->
