13の分野の歴史を追加

--- a/1-哲学/11／13-哲学/12／13-各国の哲学・思想/13-西洋哲学/13-西洋哲学.md
+++ b/1-哲学/11／13-哲学/12／13-各国の哲学・思想/13-西洋哲学/13-西洋哲学.md
@@ -9,3 +9,114 @@
 
 ## 分野の歴史
 
+<!-- 
+アウトライン
+- 1. 古代ギリシアにおける哲学の誕生：自然哲学からソクラテスの倫理へ、プラトン『国家』とアリストテレスの体系（論理学・形而上学・政治学）
+- 2. ヘレニズムとローマ世界：ストア派・エピクロス派・懐疑派の「よく生きる」探究、宇宙論と倫理の結びつき、ローマ文化への継承
+- 3. 後期古代とキリスト教思想：新プラトン主義（プロティノス）と教父（アウグスティヌス）にみる「信仰と理性」の枠組み形成
+- 4. 中世スコラ学の成立：イスラーム哲学を介したアリストテレス再受容、普遍論争、アンセルムスとトマス・アクィナス『神学大全』、大学制度による方法の定着
+- 5. ルネサンスから科学革命へ：人文主義と古典復興、マキアヴェッリの政治思想、宗教改革、自然の数学化（ガリレオ／ニュートン）と近代的知の再編
+- 6. 近代認識論と啓蒙：合理論（デカルト／スピノザ／ライプニッツ）と経験論（ロック／バークリー／ヒューム）の対立と交錯、ホッブズ／ルソーの社会契約、公共圏と革命の思想
+- 7. カントとドイツ観念論：『純粋理性批判』による批判哲学、自由と道徳の再定義、フィヒテ／シェリング／ヘーゲルにおける体系化と歴史哲学
+- 8. 19世紀の転回と近代批判：実証主義（コント）、功利主義（ベンサム／J.S.ミル）、マルクス『資本論』、ニーチェとキルケゴールにみる主体・価値・宗教の問い直し
+- 9. 20世紀の多方向化：現象学（フッサール）から解釈学・実存（ハイデガー／サルトル）へ、言語論的転回と分析哲学（フレーゲ／ラッセル／ウィトゲンシュタイン）、フランクフルト学派や構造主義の社会・文化批判
+- 10. 後期20世紀〜現代：ポスト構造主義（フーコー／デリダ）、正義論（ロールズ／ノージック）と応用倫理（生命倫理・環境倫理）、フェミニズム／ケア倫理、心の哲学と認知科学・AIがもたらす再編、グローバル化の中での「西洋哲学」自己反省
+-->
+
+西洋哲学の歴史は、特定の地域で生まれた思考が、宗教、科学、制度、そして他文化との接触を通じて、何度も自らの問いの立て方を更新してきた過程として読める。古代ギリシアで始まった「なぜそう言えるのか」を問う習慣は、キリスト教世界の形成の中で神学と結びつき、大学と出版の制度の中で方法へと鍛え直され、近代には科学と政治革命の衝撃の中で主体・自由・社会をめぐる言語を生み出した。さらに20世紀以降、言語・権力・身体・技術をめぐる新しい焦点が加わり、「普遍」として語られてきたものの条件や限界そのものが問い直されている。
+
+### 1. 古代ギリシアにおける哲学の誕生：自然から倫理へ
+「哲学」がひとつの営みとして姿を現すのは、紀元前6世紀ごろの古代ギリシアにおいて、神話の語りを手がかりにしつつも、それだけではなく、理由（ロゴス）を問う態度が強まったときだった。タレス、アナクシマンドロス、ヘラクレイトスといった自然哲学者は、世界の根源や変化の原理を、観察と推論を通じて説明しようとした。ここで重要なのは、答えの正しさそのもの以上に、「なぜそう言えるのか」を言葉で組み立て、反論に開かれた形で提示するという様式が芽生えた点である。
+
+やがて問いは、自然の構造から人間の生へ移っていく。ソクラテスはアテナイの広場で対話を重ね、徳とは何か、正義とは何かを執拗に問い直した。紀元前399年の死刑判決は、哲学が政治・共同体と緊張関係を結びうることを象徴する出来事として語られる。彼の方法は、知っているつもりの言葉を解体し、矛盾をあぶり出し、よりよい定義へ導く対話の技術であり、後の哲学が自明性と闘う手つきの原型となった。
+
+プラトンは師の死を受けて、単なる議論術ではなく、知の根拠を問う体系を構想する。対話篇、とりわけ『国家』では、魂の秩序と都市の秩序を重ね合わせ、正義を生の全体構造として描いた。さらにイデア論は、変化する感覚世界の背後に、普遍的な「あり方」を措定することで、真理の基準を立てようとする試みだった。ここで哲学は、倫理・政治・認識論を結び付ける大きな枠組みを得る。
+
+アリストテレスは、プラトン的な超越的原理に距離を取りつつ、概念を分析し、学問領域を分節することで哲学を「知の方法」として磨いた。『形而上学』が存在の最も一般的な条件を問う一方、『ニコマコス倫理学』は習慣（ヘクシス）と徳の形成を論じ、『政治学』は共同体の諸形態を比較する。論理学（後に『オルガノン』と呼ばれる群）は、推論の規則を道具として与え、以後の西洋思想が「証明」「定義」「分類」という語彙で思考する基盤を築いた。
+
+また、哲学が継続的に伝えられた背景には、学園（プラトンのアカデメイアは紀元前387年頃に創設とされる）やリュケイオンといった教育の場の存在がある。講義と討論、文書の作成と保存、弟子による再解釈という循環が、個々の思想を「伝統」に変える。西洋哲学は当初から、孤独な瞑想というよりも、学校・都市・政治と結びついた公共的営みとして始まっていた。
+
+### 2. ヘレニズムとローマ世界：生の技法としての哲学
+アレクサンドロス大王の東征（紀元前4世紀末）以後、ギリシア世界は広域の帝国秩序の中に組み込まれ、都市国家中心の政治と結びついた古典期の哲学は、個人の生の在り方をより前景化させる。こうしてストア派、エピクロス派、懐疑派などが発達し、哲学は「世界をどう説明するか」だけでなく、「不安と苦痛の中でどう生きるか」を扱う技法となっていった。
+
+ストア派は、宇宙が理（ロゴス）によって貫かれるという自然観を背景に、情念の支配から自由になる生を説いた。エピクロス派は快楽を単なる享楽ではなく、苦痛の不在として定義し、友情と節度の生活を重視する。懐疑派は確実な知の困難を指摘し、判断停止による心の平静を目指した。ここでは倫理と自然学が切り離されず、世界観が生の姿勢を支える構造が保たれている。
+
+ローマ世界では、キケロがギリシア哲学をラテン語で紹介し、セネカ、エピクテトス、マルクス・アウレリウスらがストア的実践を文章化した。哲学が学校（学派）での討議だけでなく、手紙、箴言、内省録といった形式で広がったことは、後世の思想伝達のメディアを多様化させた。こうした「哲学の生活化」は、中世の修道院的実践や、近代の倫理・自己形成論にも遠い反響を残す。
+
+### 3. 後期古代とキリスト教思想：信仰と理性の配置
+後期古代には、古典的学問の継承と新しい宗教的世界観の統合が同時に進む。新プラトン主義のプロティノスは、存在の階層を「一者」からの流出として捉え、魂が内面へ還帰して一致に至る道筋を描いた。この形而上学は、単なる宇宙論にとどまらず、自己の内面を深く掘り下げる精神史の方向性を与える。
+
+キリスト教思想は、啓示への信仰を核に持ちながらも、ギリシア哲学の概念を用いて自己理解を進めた。アウグスティヌス（354–430）は『告白』で記憶と時間、欲望と恩寵をめぐる内面のドラマを描き、神の永遠と人間の時間経験を結び付けて考える枠組みをつくった。彼において、真理は外部の対象としてではなく、魂の深みで「照らされるもの」として経験される。
+
+この時期に「信仰と理性」の関係が主題化される。哲学は信仰の外部にある競合物ではなく、信仰を理解し、異端や批判に応答し、概念を整えるための言語として位置付けられていく。西洋哲学の長い歴史は、しばしばこの配置換えの反復として進む。つまり、超越的な権威（神、自然法則、理性の形式、歴史の必然）と、人間の有限な思考の間の距離をどう測るか、という問題である。
+
+伝達の制度史を見ても、後期古代は節目を含む。アテナイの哲学学校が皇帝ユスティニアヌスによって529年に閉鎖されたという伝承は、古典哲学の公的基盤が変容したことを象徴する。とはいえ継承は途切れず、ボエティウス『哲学の慰め』（6世紀）に見られるように、古典的な理性の語彙は新しい宗教的世界の中で再配置される。こうして哲学は、かつての都市国家の公共文化から、教会・修道院・宮廷へと居場所を移しながら生き延びた。
+
+### 4. 中世スコラ学の成立：大学と論証の文化
+中世になると、哲学は修道院での学びを基盤にしつつ、12世紀以降に形成された大学制度の中で新しい形式を獲得する。ここで決定的だったのは、アリストテレス文献の再流入である。イスラーム世界の哲学者イブン・スィーナー（アヴィセンナ）やイブン・ルシュド（アヴェロエス）の注釈・解釈を経由して、論理学・自然学・形而上学が体系的に参照されるようになり、神学と哲学の分業・協働が進んだ。
+
+普遍論争は、言葉（概念）が世界にどう関わるかをめぐる争いとして、中世の論理学と存在論の核心を形づくった。「普遍」は実在するのか、それとも名前にすぎないのか。この問いは、単なる言語遊戯ではなく、神の認識、人間の知、自然の秩序を同時に左右するものだった。アンセルムス（1033頃–1109）の存在論的証明は、信仰の内容を理性の推論で支えようとする大胆な試みとして、その後の形而上学的議論の参照点となる。
+
+トマス・アクィナス（1225頃–1274）は、『神学大全』においてアリストテレス哲学を取り込みつつ、自然理性の到達点と啓示の領域を区別し、しかし断絶させずに接続する。五つの道による神の存在証明は、宇宙の因果と運動を手がかりに神へ遡行する論証の型を示した。スコラ学の議論様式（異論の提示、反論、解答、再反論）は、のちの近代哲学が「批判」と呼ぶ営みの前史として理解できる。
+
+さらに重要なのは、学問が制度化され、権威テキストの解釈と公開討論が学ぶ者の訓練になったことだ。哲学は個人の天才の直観だけでなく、共同体の中で反証可能な形で組み立てられる「技術」でもある。この制度的側面は、近代以降の学術・出版・学会へと形を変えながら受け継がれる。
+
+ただし制度化は同時に境界線も生む。1277年のパリでの「異端命題」非難のように、哲学的主張が宗教的権威と衝突する局面もあった。ウィリアム・オッカムが代表する唯名論や、意志を重視する潮流は、普遍や目的論的秩序への信頼を揺さぶり、のちの近代的な自然観や個人観に通じる緊張を醸成する。中世は停滞期ではなく、近代の条件を内部で準備した時代でもあった。
+
+### 5. ルネサンスから科学革命へ：人間・国家・自然の再定義
+15世紀のルネサンスは、古典古代の文献・言語の復興を通じて、思考の参照枠を更新した。人文主義は、論理の形式よりも修辞や歴史記述、人格形成（教養）を重視し、政治と倫理を現実の言語で語る傾向を強める。マキアヴェッリは『君主論』（1513頃）で、徳を道徳的善の同義語としてではなく、権力を維持する力能として捉え直し、政治思想に冷徹な現実分析の軸を導入した。
+
+同時期、宗教改革（1517年にルターが「九十五箇条の論題」を提示）は、権威と良心、教会と個人の関係を揺るがし、信仰をめぐる争いが政治秩序の問題と重なった。哲学は、普遍的真理の探究であると同時に、共同体の統合と分裂に関わる言説となり、近代国家形成の背景で「主権」「法」「契約」といった概念が磨かれていく。
+
+自然観の転換も大きい。ガリレオ・ガリレイは運動を数学的法則として捉える姿勢を打ち立て、ニュートンは『プリンキピア』（1687）で万有引力を含む力学体系を提示した。自然が「目的に向かう秩序」ではなく、「計測可能な法則に従う過程」として理解されるとき、哲学は知の根拠（方法）を問う方向へ押し出される。科学革命は哲学を不要にしたのではなく、むしろ「確実な知とは何か」「観察と理性はどう結びつくか」という問いを尖鋭化させた。
+
+この転換を言語化したのが、フランシス・ベーコン『ノヴム・オルガヌム』（1620）に代表される新しい方法論である。権威に依存する演繹だけでなく、観察の集積と実験による帰納を重視する姿勢は、自然哲学の語彙そのものを変えた。デカルトの懐疑や、後のロックの経験論が「知の基礎」を問い直すのは、科学が成功したからこそ、その成功がどこから来るのかを説明する必要が生じたためでもある。
+
+### 6. 近代認識論と啓蒙：主体・社会・歴史の回路
+17世紀の合理論は、確実性の基礎を理性の明晰さに求めた。デカルトは『方法序説』（1637）で懐疑を方法として徹底し、「我思う、ゆえに我あり」という出発点から、心身二元論と数学的自然観を組み立てた。スピノザは『エチカ』（1677）で幾何学的な証明形式を採り、神と自然を同一視する汎神論的体系の中で、自由を必然性の理解として捉える。ライプニッツの単子論は、主体性と世界秩序の一致を独自に説明した。
+
+これに対し経験論は、知の源泉を経験に置く。ロックの『人間知性論』（1690）は観念の起源を検討し、社会契約と寛容の議論にも接続した。バークリーは物質の実体性を批判し、知覚と存在の関係を先鋭化させる。ヒュームは『人間本性論』（1739–40）で因果性や自我の実体性を懐疑的に分析し、理性の限界を突き付けた。この対立は、単なる学派の争いではなく、近代科学と宗教、個人と国家、自由と秩序をめぐる全体的な問題の裏面でもあった。
+
+政治哲学でも、ホッブズ『リヴァイアサン』（1651）は内戦の経験を背景に主権を強固に構想し、ルソー『社会契約論』（1762）は一般意志を掲げて政治的自由の理念を新たに定式化する。啓蒙は理性を公共的な力として称揚したが、その理性がどの主体に属し、どの制度で実現されるのかは常に争点だった。哲学はここで、認識論・倫理学・政治学を相互に絡み合わせながら、近代の「主体」を発明していく。
+
+この流れは、1789年のフランス革命の経験によって一層加速する。自由と平等の理念は現実の暴力と隣り合わせで現れ、理性による秩序化は、救済であると同時に恐怖にもなりうることが露呈した。哲学は、理念と制度の距離をどう埋めるのか、歴史の中で人間はいかに成熟しうるのかを、より深い射程で問うことになる。
+
+### 7. カントとドイツ観念論：批判と体系の緊張
+カントは、合理論と経験論の対立を「認識の条件」へと翻訳し直すことで、近代哲学の地平を決定づけた。『純粋理性批判』（1781、改訂版1787）は、私たちが経験できる対象が、時間・空間という感性の形式と、悟性のカテゴリーによって構成されることを示し、形而上学を「可能な経験」の境界で裁定した。ここで哲学の中心は、世界についての断定から、断定を可能にする枠組みの吟味へ移る。
+
+同時にカントは、自由と道徳を認識論の外部に追いやったのではなく、実践理性の領域として積極的に基礎づける。『実践理性批判』（1788）と『道徳形而上学の基礎づけ』（1785）は、結果ではなく意志の形式に基づく義務倫理を提起し、人間を自己立法する存在として描いた。啓蒙の理性は、ここで単なる計算能力ではなく、自己に法を与える能力として再定義される。
+
+さらに『判断力批判』（1790）は、美や目的性の問題を扱い、自然の機械論的説明と、人間が意味を見いだす経験のあいだを媒介する。ここで「自然は法則に従うが、私たちはそこに秩序や目的を読み取らずにいられない」という緊張が主題化され、芸術論・生命観・歴史理解に広い影響を与えた。啓蒙とは何かを問う短文「啓蒙とは何か」（1784）も含め、カント哲学は近代の自己理解を、認識・道徳・感性という複数の回路で支える枠組みとなった。
+
+フィヒテ、シェリング、ヘーゲルへと続くドイツ観念論は、カントが残した二重性（自然必然性と自由、現象と物自体）の緊張を、より包括的な体系へ統合しようとする運動だった。ヘーゲル『精神現象学』（1807）は、意識が世界と衝突しながら自己を形成する歴史を描き、自由を抽象的な権利ではなく、制度と承認の中で実現されるものとして捉える。哲学が歴史と社会の自己理解になるという発想は、以後の思想に大きな影響を与えた。
+
+### 8. 19世紀の転回と近代批判：科学化・社会化・主体化
+19世紀には、哲学の位置が揺れ動く。自然科学が急速に発展し、社会も産業化と都市化の渦中に入ると、哲学は「科学の王」ではいられなくなる一方で、科学・社会・宗教の全体をどう理解するかという統合の欲求も強まる。コントの実証主義は、形而上学を歴史の段階として退け、観察と法則による社会科学（社会学）を構想した。ここで哲学は、世界像の中心から退く代わりに、知の編成原理として自らを再定位する。
+
+倫理と政治の領域では、ベンサムやJ.S.ミルが功利主義を展開し、幸福の計算可能性と個人の自由を結び付けようとした。他方、マルクスはヘーゲル哲学と経済分析を接合し、疎外や階級支配を歴史的過程として捉える。『共産党宣言』（1848）と『資本論』第1巻（1867）は、理念だけでなく生産と労働の構造が社会を規定するという視点を提示し、哲学が社会批判の方法論へ変貌しうることを示した。
+
+同時に、主体の内面へと回帰する思想も現れる。キルケゴールは「単独者」の実存と信仰の跳躍を語り、普遍的体系が捉えきれない苦悩を前景化させた。ニーチェは『ツァラトゥストラはこう語った』（1883–85）などで、道徳の起源を系譜学的に問い直し、「神は死んだ」という断言で価値の根拠喪失を突き付ける。近代が掲げた理性・進歩・道徳の自明性は、ここで内側から侵食され、20世紀思想の課題が準備される。
+
+### 9. 20世紀の多方向化：経験・言語・権力の哲学
+20世紀に入ると、西洋哲学は単一の中心から分岐し、多方向に展開する。フッサールは現象学として、科学が前提にする世界（生活世界）へ立ち返り、意識が対象を意味づける仕方を精密に記述しようとした。ハイデガー『存在と時間』（1927）は、存在を問うことを人間存在（現存在）の時間性として捉え直し、世界内存在や死への先駆など、実存の基本構造を描いた。実存哲学・実存主義は、戦争と不安の時代に、自由・責任・他者をめぐる問いとして広く共有され、サルトル『存在と無』（1943）やカミュ『シーシュポスの神話』（1942）などに結実する。
+
+一方、「言語論的転回」は、哲学の主題を意識から言語へ移した。フレーゲ『概念記法』（1879）に端を発する論理学の刷新は、ラッセルとホワイトヘッド『プリンキピア・マテマティカ』（1910–13）へつながり、意味・指示・推論の分析が哲学の中心技法になる。ウィトゲンシュタインは『論理哲学論考』（1921）で言語と世界の対応を描いた後、『哲学探究』（死後1953）で言語ゲームと生活形式を強調し、哲学的混乱を言語の働きの誤解として解く道を示した。分析哲学はここから、心の哲学、科学哲学、言語哲学へと拡張し、緻密な議論のスタイルを確立する。
+
+社会と歴史の批判も深化する。フランクフルト学派のホルクハイマーとアドルノ『啓蒙の弁証法』（1944）は、理性が解放ではなく支配の装置にもなりうることを描き、批判理論の方向性を示した。構造主義はソシュールの言語学（『一般言語学講義』1916）を源泉とし、レヴィ＝ストロースらが文化を記号の体系として捉えた。哲学は、主体の内面・言語の構造・社会の権力という異なる焦点を並行して抱え込み、統一的な「近代の物語」を疑う方向へ進んでいく。
+
+分析哲学の内部でも、経験と論理の関係は揺れ動く。カルナップらの論理実証主義は、検証可能性を基準に形而上学を退けようとしたが、クワイン「経験主義の二つのドグマ」（1951）は分析／総合の区別を批判し、科学知の全体が経験によって調整されると主張した。さらにクーン『科学革命の構造』（1962）は、科学が累積的に進歩するだけではなく、パラダイム転換という不連続を含むことを示し、知の客観性をめぐる哲学の議論に新しい緊張をもたらした。ここで哲学は、科学を外から裁くよりも、科学の営みそのものを歴史的・社会的実践として理解する方向へ広がる。
+
+また、対話と理解の条件をめぐる探究も現代哲学を形づくる。ガダマー『真理と方法』（1960）は解釈の歴史性を強調し、意味が固定的に「回収」されるのではなく、伝統との対話の中で生成されることを示した。ハーバーマスは公共性の問題を軸に、合理性を支配から切り離して再構成しようと試みる。こうした動きは、言語・歴史・社会の交点に哲学を置き直し、分析哲学と大陸哲学の分断を超えて、相互理解の可能性そのものを問う議論を促した。
+
+### 10. 後期20世紀〜現代：多声性と自己反省の中の西洋哲学
+後期20世紀のポスト構造主義は、普遍的基盤への不信をさらに推し進める。フーコーは『監獄の誕生』（1975）などで、知と権力が結びつき、人間を分類し規律化する制度が主体を形成する過程を描いた。デリダは『グラマトロジーについて』（1967）で、意味が差延の運動の中で生成されることを示し、形而上学が前提としてきた中心と起源の概念を揺さぶった。ここで哲学は、世界を一つの原理へ還元するよりも、言説の条件と排除の構造を暴く営みとして強く意識される。
+
+他方で、規範を立て直す動きもある。ロールズ『正義論』（1971）は無知のヴェールを用いて公正としての正義を構想し、政治哲学を再活性化した。ノージック『アナーキー・国家・ユートピア』（1974）は最小国家と権利を軸に異なる結論を提示し、自由と平等の緊張を鮮明にする。応用倫理では生命倫理が医療技術の進展とともに発展し、環境倫理や動物倫理も社会的課題として前景化する。哲学は抽象的原理から、制度設計や具体的判断の場へと往還するようになる。
+
+フェミニズム思想は、主体の普遍性がしばしば男性中心の経験を一般化したものであることを批判し、知と権力の関係を新たな角度から照らした。ボーヴォワール『第二の性』（1949）は「女は女に生まれるのではない、女になるのだ」として社会的形成を主題化し、バトラー『ジェンダー・トラブル』（1990）は性別規範の遂行性を論じた。ケア倫理も、ギリガン『もうひとつの声』（1982）などを起点に、抽象的普遍原理だけでは捉えきれない関係性と依存の現実を哲学の中心へ引き戻す。
+
+心の哲学と認知科学の接近は、古くからの心身問題を新しい形で更新した。チューリング「計算機械と知性」（1950）や、1956年の人工知能研究の提案は、知性を計算として捉える見通しを広げ、サールの「中国語の部屋」（1980）は理解とシンボル操作の差異をめぐる論争を喚起した。意識の「ハード・プロブレム」を掲げたチャーマーズ（1996）以降、科学的説明と主観的経験の隔たりは再び中心課題となる。今日、AIが社会の意思決定や創作にまで関与する中で、責任、透明性、偏り、そして人間観そのものが問い直されている。
+
+こうした展開を通じて「西洋哲学」という呼び名自体も自己反省の対象となった。植民地主義や世界史の非対称性の中で形成された学問の制度、翻訳による概念の移動、他地域の思想との交差を踏まえると、西洋哲学は閉じた伝統ではなく、対話と衝突の歴史として理解されるべきだろう。古代の広場で始まった問いは、今もなお、共同体の制度、言語の枠組み、身体と技術の条件の中で姿を変えながら続いている。
+
+その意味で、現代の課題は「新しい理論を一つ追加する」ことだけではない。自由や理性、主体といった古典的語彙が、誰の経験を中心に据え、誰を周縁化してきたのかを問い直し、異なる経験や伝統と接続可能な概念へと作り替える作業が含まれる。西洋哲学の歴史は、完成した遺産の目録ではなく、他者の声と現実の問題によって絶えず書き換えられる、未完の対話として続いていく。
